test/1.2/errors/T_EREF.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

data int x;
bank b0 {
    parameter register_size = 4;

    // This gives an EREF, which is probably correct.  But there is
    // some code in structure.py that raises a EASZVAR.  That code can
    // probably never be triggered.

    /// ERROR EREF
    register r[$x];
}

// Bug 4970
bank {
    register r1 size 4 @ undefined;
}

bank b1 {
}

method init {
    /// ERROR EREF
    $y.z;
    /// ERROR EREF
    $b0.z;
    // Bug 4970, don't look up stuff in anonymous banks
    /// ERROR EREF
    $b1.r1;
}


// When referencing parameters within if statements, we only allow references
// to parameters in parent scopes; referencing parameters in sibling scopes is
// forbidden. In earlier versions of DMLC, such references sometimes did work
// and sometimes did not, depending on a combination of declaration order,
// object naming and Python's hash function. See also T_EREF_6.

bank b2 {
    group g0 { parameter p = true;}
    /// ERROR EREF
    group g1 { if ($g0.p) {} }
}
bank b3 {
    /// ERROR EREF
    group g0 { if ($g1.p) {} }
    group g1 { parameter p = true;}
}

/// ERROR EREF
parameter p = $garbage;
